fixed initial state of filter overflow when material icons are not loaded yet

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -14,6 +14,7 @@
   line-height: 0.5;
   position: relative;
   top: 6px;
+  width: 24px;
 }
 
 #filterByTextWrapper {
@@ -80,6 +81,7 @@
 
 #filterOverflow > button::before {
   font-size: 22px;
+  width: 22px;
 }
 
 #filterOverflow > div {
